k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: payetonkawa-prod
spec:
  selector:
    app: auth-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
